# chip-8

./: CMakeLists.txt  Makefile  README.md  chip8  chip_8.cpp  chip_8.hpp
roms/: Pong (1 player).ch8:Zone.Identifier  lunar_lander.ch8:Zone.Identifier
src/: chip_8.cpp  chip_8.hpp  main.cpp  platform.cpp  platform.hpp
